--- a/Mobile Development/app/src/main/res/layout/activity_login.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_login.xml
@@ -117,8 +117,20 @@
                     style="@style/bold_tv_nav"
                     android:id="@+id/register_navigation"
                     android:text="@string/register" />
-
             </LinearLayout>
+
+            <ProgressBar
+                android:id="@+id/loading_login"
+                style="?attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.25"
+                tools:visibility="visible" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
