--- a/Mobile Development/app/src/main/res/layout/activity_register.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_register.xml
@@ -134,8 +134,21 @@
                     android:id="@+id/login_navigation"
                     style="@style/bold_tv_nav"
                     android:text="@string/login" />
-
             </LinearLayout>
+
+            <ProgressBar
+                android:id="@+id/loading_register"
+                style="?attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.25"
+                tools:visibility="visible" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
