--- a/Mobile Development/app/src/main/res/layout/fragment_home.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_home.xml
@@ -24,10 +24,10 @@
             <TextView
                 style="@style/title_homepage"
                 android:id="@+id/tv_user_homepage"
-                android:text="@string/hai_user"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/image_profile_homepage"
-                app:layout_constraintBottom_toBottomOf="@id/image_profile_homepage"/>
+                app:layout_constraintBottom_toBottomOf="@id/image_profile_homepage"
+                tools:text="Hai, Fasrecon"/>
 
             <ImageView
                 android:id="@+id/image_profile_homepage"
@@ -105,7 +105,7 @@
             app:layout_constraintEnd_toEndOf="@id/guideline_vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <ImageView
@@ -123,7 +123,8 @@
                     android:text="@string/chatbot"
                     app:layout_constraintStart_toEndOf="@id/chatbot_image"
                     app:layout_constraintTop_toTopOf="@id/chatbot_image"
-                    app:layout_constraintBottom_toBottomOf="@id/chatbot_image"/>
+                    app:layout_constraintBottom_toBottomOf="@id/chatbot_image"
+                    app:layout_constraintEnd_toEndOf="parent"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
@@ -156,7 +157,9 @@
                     android:text="@string/camera"
                     app:layout_constraintStart_toEndOf="@id/camera_image"
                     app:layout_constraintTop_toTopOf="@id/camera_image"
-                    app:layout_constraintBottom_toBottomOf="@id/camera_image"/>
+                    app:layout_constraintBottom_toBottomOf="@id/camera_image"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
@@ -168,6 +171,5 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintGuide_percent="0.5"
             app:layout_constraintStart_toStartOf="parent" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
