Feat: get user data on profile fragment

--- a/Mobile Development/app/src/main/res/layout-land/activity_profile_settings.xml
+++ b/Mobile Development/app/src/main/res/layout-land/activity_profile_settings.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:background="@color/background_fragment_activity"
         android:orientation="vertical"
-        tools:context=".ui.profile.ProfileSettingsActivity">
+        tools:context=".ui.profilesettings.ProfileSettingsActivity">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbar_layout"
