--- a/Mobile Development/app/src/main/res/layout/fragment_profile.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_profile.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".ui.settings.SettingsFragment">
+        tools:context=".ui.profile.ProfileFragment">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbar_layout"
@@ -29,7 +29,7 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <ImageView
-            android:id="@+id/User_profile"
+            android:id="@+id/user_profile"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginTop="12dp"
@@ -42,9 +42,9 @@
         <TextView
             style="@style/user_name"
             android:id="@+id/User_name"
-            app:layout_constraintEnd_toEndOf="@+id/User_profile"
-            app:layout_constraintStart_toStartOf="@+id/User_profile"
-            app:layout_constraintTop_toBottomOf="@+id/User_profile"
+            app:layout_constraintEnd_toEndOf="@+id/user_profile"
+            app:layout_constraintStart_toStartOf="@+id/user_profile"
+            app:layout_constraintTop_toBottomOf="@+id/user_profile"
             tools:text="Fasrecon"/>
 
         <TextView
