--- a/Mobile Development/app/src/main/res/layout-land/activity_register.xml
+++ b/Mobile Development/app/src/main/res/layout-land/activity_register.xml
@@ -77,7 +77,7 @@
                     style="@style/input_layout_enabled"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/email_register_label"
-                    app:startIconDrawable="@drawable/emal_icon">
+                    app:startIconDrawable="@drawable/email_icon">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/text_input_email"
@@ -141,6 +141,18 @@
                         android:text="@string/login" />
 
                 </LinearLayout>
+                <ProgressBar
+                    android:id="@+id/loading_register"
+                    style="?attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.25"
+                    tools:visibility="visible" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
