--- a/Mobile Development/app/src/main/res/layout/activity_login.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@
                 android:id="@+id/text_email_layout_login"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/email_login"
-                app:startIconDrawable="@drawable/emal_icon">
+                app:startIconDrawable="@drawable/email_icon">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/email_login_input"
