--- a/Mobile Development/app/src/main/res/layout/fragment_profile.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_profile.xml
@@ -28,7 +28,7 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/user_profile"
             android:layout_width="120dp"
             android:layout_height="120dp"
