Feat: Adding change password feature

--- a/Mobile Development/app/src/main/res/layout/fragment_myclothes.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_myclothes.xml
@@ -62,6 +62,19 @@
             app:layout_constraintTop_toBottomOf="@id/label_your_clothes_collection"
             tools:listitem="@layout/item_clothes_list" />
 
+        <ProgressBar
+            android:id="@+id/loading_classify_image"
+            style="?attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.5"
+            tools:visibility="visible" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
